Make doc header conditional

--- a/templates/cronjob.j2
+++ b/templates/cronjob.j2
@@ -1,4 +1,6 @@
+{% if env_vars|length > 0 -%}
 # Environment variables
+{% endif -%}
 {% for key, value in env_vars.items() -%}
 {{ key }}={{ value }}
 {% endfor -%}
